  A big thank you to Josh Ayers.  Closes :issue:`148`.


Bugs fixed
----------

- Fixed a segfault on platforms that do not support unaligned memory access
  (closes: :issue:`134`).  Thanks to Julian Taylor.

- Fixed broken inheritance in :class:`IsDescription` classes (thanks to
  Andrea Bedini).  Closes :issue:`65`.

- Fixed table descriptions copy method (closes :issue:`131`).

- Fixed open failures handling (closes :issue:`158`).
  Errors that happen when one tries to open an invalid HDF5 file (e.g. an
  empty file) are now detected earlier by PyTables and a proper exception
  (:exc:`exceptions.HDF5ExtError`) is raised.
  Also, in case of open failures, invalid file descriptors are no more cached.
  Before is fix it was not possible to completely close the bad file and reopen
  the same path, even if a valid file was created in the meanwhile.
  Thanks to Daniele for reporting and for the useful test code.

- Fixed support to rich structured  numpy.dtype in
  :func:`description.descr_from_dtype`.   Closes :issue:`160`.

- Fixed sorting of nested tables that caused AttributeError.
  Closes :issue:`156` and :issue:`157`.  Thanks to Uwe Mayer.


Deprecations
------------

- The :data:`parameters.MAX_THREADS` configuration parameter is now
  deprecated.  Please use :data:`parameters.MAX_BLOSC_THREADS` and
  :data:`parameters.MAX_NUMEXPR_THREADS` instead.
  See :issue:`142`.

- Since the support for HDF5 1.6.x has been dropped, the *warn16incompat*
  argument of the :meth:`File.createExternalLink` method and the
  :exc:`exceptions.Incompat16Warning` exception class are now deprecated.

.. _numpy: http://numpy.scipy.org
.. _Blosc: https://github.com/FrancescAlted/blosc
.. _Numexpr: http://code.google.com/p/numexpr
.. _pyflakes: https://launchpad.net/pyflakes
.. _Cython: http://www.cython.org


  **Enjoy data!**

  -- The PyTables Team


.. Local Variables:
.. mode: rst
.. coding: utf-8
.. fill-column: 72
.. End: